# Prog1_NHF1

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  aszteroida.h  lista.h  main.c  player.h
BFXR/: Laser_Shoot.bfxrsound  Meteor_explosion.bfxrsound  UFO_explosion.bfxrsound
Credits/: meteor_credit.txt
log/: log.txt
saves/: ranglista.txt
src/: app.c  app.h  aszteroida.c  aszteroida.h  clock.c  clock.h  defines.h  file.c  file.h  font.c  font.h  main.c  menu.c  menu.h  mouse.h  player.c  player.h  ranglista.c  ranglista.h  reticle.c  reticle.h  shoot.c  shoot.h
